# todo-app

./: Cargo.toml  LICENSE  README.md
migrations/2023-10-22-104313_create_tasks/: up.sql
src/: actions.rs  initdb.rs  main.rs  models.rs  schema.rs  tests.rs
src/api/: tasks.rs
src/model/: task.rs
src/tests/: mod.rs
